test/resources/typer/failing/IfError1.amy
object IfError
  if (42) then () else () end if
end IfError
